add swagger interface view
